Completed enough features for demonstration

--- a/paper/nid_dataset_features_framework.tex
+++ b/paper/nid_dataset_features_framework.tex
@@ -35,7 +35,7 @@ rcpaffenroth@wpi.edu}
     In addition, it is often difficult to generate new features using a dataset due to the lack of packet capture files or inadequate ground truth labeling information for a given dataset.
     In this work, we look at network intrusion dataset development with a focus on improving the delivery of datasets from a dataset researcher to a researcher acquiring the dataset for the research of anomaly detection and classification techniques.
     Specifically, we focus on making existing features more understandable, providing clear labeling criteria, and allowing a clear path for researchers to generate new features.
-    This work outlines a framework on how to achieve these improvements along with a publicly available reference implementation of the framework demonstrated on several widely utilized network intrusion datasets.
+    In this work we outline a framework for achieving these improvements along with providing a publicly available reference implementation.
 \end{abstract}
 
 \begin{IEEEkeywords}
