Significant work on paper

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -217,4 +217,28 @@
   pages     = {253--262},
 }
 
+@Article{sharafaldin2018toward,
+  author  = {Sharafaldin, Iman and Lashkari, Arash Habibi and Ghorbani, Ali A},
+  title   = {Toward generating a new intrusion detection dataset and intrusion traffic characterization.},
+  journal = {ICISSp},
+  year    = {2018},
+  volume  = {1},
+  pages   = {108--116},
+}
+
+@InProceedings{ringip2vec,
+  author    = {Ring, Markus and Dallmann, Alexander and Landes, Dieter and Hotho, Andreas},
+  title     = {IP2Vec: Learning Similarities Between IP Addresses},
+  booktitle = {2017 IEEE International Conference on Data Mining Workshops (ICDMW)},
+  year      = {2017},
+  pages     = {657-666},
+  doi       = {10.1109/ICDMW.2017.93},
+}
+
+@TechReport{claise2008specification,
+  author = {Claise, Benoit},
+  title  = {Specification of the IP flow information export (IPFIX) protocol for the exchange of IP traffic flow information},
+  year   = {2008},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
